src/main/java/com/example/reservation/reservationsystem/global/error/response/ErrorResponse.java
package com.example.reservation.reservationsystem.global.error.response;

import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
public class ErrorResponse {
    private final String code;
    private final String message;
}
